syntax = "proto3";

option java_package = "com.example.weather";
option java_outer_classname = "WeatherServiceProto";

service WeatherService {
  rpc GetWeatherUpdates (WeatherRequest) returns (stream WeatherUpdate);
}

message WeatherRequest {
  string location = 1;
}

message WeatherUpdate {
  string location = 1;
  string description = 2;
  double temperature = 3;
  double humidity = 4;
  double wind_speed = 5;
}
